Theme structure + brand colors.

--- a/todo
+++ b/todo
@@ -19,4 +19,6 @@ Pages:
     - Blueprints
         - Things I'm currently working on. 
             - Project Cyan
-        - Tomes App - D&D Character Manager.
+            - Tomes App - D&D Character Manager.
+            - Color Scheme for this website
+            - Logo for this website.
