--- a/todo
+++ b/todo
@@ -18,7 +18,7 @@ Pages:
 
     - Blueprints
         - Things I'm currently working on. 
-            - Project Cyan
-            - Tomes App - D&D Character Manager.
-            - Color Scheme for this website
-            - Logo for this website.
+            P - Project Cyan
+            P - Tomes App - D&D Character Manager.
+            P - Color Scheme for this website
+            P - Logo for this website.
